# srsRAN-Quantum-MAC-Patch

./: CMakeLists.txt  README.md  main.c
